capsules/spectral-bridge/tests/ui/lived_state_witness_cannot_be_forged.stderr
error: cannot construct `TemporalLivedStateWitnessV1` with struct literal syntax due to private fields
 --> tests/ui/lived_state_witness_cannot_be_forged.rs:4:19
  |
4 |     let _forged = TemporalLivedStateWitnessV1 {};
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: private fields that were not provided
help: you might have meant to use the `new` associated function
  |
4 -     let _forged = TemporalLivedStateWitnessV1 {};
4 +     let _forged = TemporalLivedStateWitnessV1::new(_, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _);
  |
