capsules/spectral-bridge/tests/ui/lived_state_witness_cannot_be_forged.rs
use spectral_bridge_server::lived_state_witness::TemporalLivedStateWitnessV1;

fn main() {
    let _forged = TemporalLivedStateWitnessV1 {};
}
